button avoid default value for text-align category text align msrc authentication status msrc manual login func

--- a/src/es/components/atoms/button/category-/category-.css
+++ b/src/es/components/atoms/button/category-/category-.css
@@ -10,12 +10,16 @@
     --button-category-justify-content:var(--button-category-justify-content-custom, flex-start);
     --button-category-padding:var(--button-category-padding-custom, 0.75em 0.5em);
     --button-category-width:var(--button-category-width-custom, 100%);
+    --button-category-label-text-align: left;
 }
 #label {
     white-space: break-spaces;
     word-break: break-word;
 }
 @media only screen and (max-width: _max-width_) {
+    :host {
+        --button-category-label-text-align: center;
+    }
     button {
         flex-direction: column;
         height: 100%;
